<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotelapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.example.hotelapp.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistic"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_userinfo"
        android:name="com.example.hotelapp.ui.userinfo.UserInfoFragment"
        android:label="@string/title_userinfo"
        tools:layout="@layout/fragment_userinfo" />
</navigation>