<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:fontFamily="@font/aclonica">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_username"
        android:hint="username"
        android:textSize="24sp"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_password"
        android:hint="password"
        android:textSize="24sp"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_fullname"
        android:hint="fullname"
        android:textSize="24sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_birthday"
        android:hint="birthday"
        android:textSize="24sp"
        android:inputType="date"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_sex"
        android:hint="sex"
        android:textSize="24sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_email"
        android:hint="email"
        android:textSize="24sp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_phone"
        android:hint="phone"
        android:textSize="24sp"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_position"
        android:textSize="22sp" />
    <RadioGroup
        android:id="@+id/rdi_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff"
        android:textSize="16sp"
        android:id="@+id/rdi_staff"
        android:checked="true"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        android:textSize="16sp"
        android:id="@+id/rdi_manager"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/custom_button"
            android:text="CANCEL" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/btn_ok"
            android:text="OK"
            android:background="@drawable/custom_button"/>
    </LinearLayout>

</LinearLayout>